objects/ACP_TE_Supplier_Evaluation__c.object
<CustomObject>
    <description>Anushka 04/24/17 – Created for Account Plan</description>
    <fields>
        <fullName>ACP_Account_Plan__c</fullName>
        <description>Anushka 04/24/17 - Created for Account Plan</description>
        <label>Account Plan</label>
        <referenceTo>ACP_Account_Plan__c</referenceTo>
        <relationshipLabel>TE Supplier Evaluations</relationshipLabel>
        <relationshipName>TE_Suppliers_Ratings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACP_Comments__c</fullName>
        <description>Anushka 04/24/17 - Created for Account Plan</description>
        <inlineHelpText>Please enter the Additional Comments</inlineHelpText>
        <label>Comments</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACP_Criteria__c</fullName>
        <description>Anushka 04/24/17 - created for Account plan</description>
        <inlineHelpText>Select the topic that most closely describes the area/activity being evaluated</inlineHelpText>
        <label>Criteria</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Customer_Rating__c</fullName>
        <description>Anushka 04/24/17 - Created for account Plan</description>
        <inlineHelpText>Select Average, Above Average, or Below Average</inlineHelpText>
        <label>Customer Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Customer_View_of_TE_Performance__c</fullName>
        <description>Anushka 04/24/17 - Created for Account Plan</description>
        <inlineHelpText>What is the customer‘s assessment of TE Performance?</inlineHelpText>
        <label>Customer&apos;s View of TE&apos;s Performance</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACP_Customers_Expectations__c</fullName>
        <description>Anushka 04/24/17 -  Created for Account Plan</description>
        <inlineHelpText>Briefly describe what the Customer has stated is expected of TE.</inlineHelpText>
        <label>Customers&apos; Expectations</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACP_Description__c</fullName>
        <description>Anushka 04/25/17 - Created for Account Plan</description>
        <inlineHelpText>Please enter the Description of the Supplier</inlineHelpText>
        <label>Description</label>
        <length>12500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACP_Importance_to_Customers__c</fullName>
        <description>Anushka 04/24/17 - Created for Account Plan</description>
        <inlineHelpText>Select High, Medium, or Low</inlineHelpText>
        <label>Importance to Customers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_TE_View_of_Performance__c</fullName>
        <description>Anushka 04/24/17 - Created for Account Plan</description>
        <inlineHelpText>Briefly describe how the TE Support Team would [describe or quantify] TE
performance relative to Customer Expectations.</inlineHelpText>
        <label>TE&apos;s View of Performance</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <label>TE Supplier Evaluation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SE-{00000000}</displayFormat>
        <label>TE Supplier Evaluation Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TE Supplier Evaluations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>